marble (4:15.08.0-0ubuntu1) UNRELEASED; urgency=medium

  [ José Manuel Santamaría Lema ]
  * Update symbols: mark as optional symbols gone after building with
    GCC 5

  [ Jonathan Riddell ]
  * New upstream release
  * Port to frameworks 5
  * new upstream beta release

  [ Philip Muškovac ]
  * Add upstream_fix-vtable-linking.diff to fix vtable linking

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:44:25 +0100

marble (4:15.04.2-0ubuntu2) wily; urgency=medium

  * Update symbol file for armhf

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 22 Jun 2015 15:21:44 +0200

marble (4:15.04.2-0ubuntu1) wily; urgency=medium

  [ Jonathan Riddell ]
  * Make kubuntu_disable-MarbleRunnerManagerTest.diff apply with policy

  [ Scarlett Clark ]
  * New upstream release
  * wrap-and-sort 

  [ Jonathan Riddell ]
  * New upstream release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 09 Jun 2015 22:33:11 +0200

marble (4:14.12.3-0ubuntu2) vivid; urgency=medium

  * Disable running the MarbleRunnerManagerTest test. Upstream says
    it is flakey and to be ignored.

 -- Matthias Klose <doko@ubuntu.com>  Mon, 16 Mar 2015 18:02:12 +0100

marble (4:14.12.3-0ubuntu1) vivid; urgency=medium

  * New upstream release

 -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 13:42:25 -0700

marble (4:14.12.2-0ubuntu1) vivid; urgency=medium

  * New upstream release
  * Remove unstable from watch file, uscan fails with 
    remote site does not even have current version
  * batchpatch new symbols.

 -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 10 Feb 2015 08:12:41 -0800

marble (4:14.12.0-0ubuntu2) vivid; urgency=medium

  * Remove .acc files, there are no abi tars and we already have .symbols files

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 18 Dec 2014 14:08:05 +0100

marble (4:14.12.0-0ubuntu1) vivid; urgency=medium

  * New upstream release
  * Remove kdelibs5-dev depend version as there was not a new release.
