@@ -14,9 +14,13 @@ Build-Depends: cmake,
                libkf5runner-dev,
                libkf5wallet-dev,
                libphonon4qt5-dev,
+               libqt4-dev,
+               libqt4-opengl-dev,
                libqt5opengl5-dev,
                libqt5svg5-dev,
                libqt5webkit5-dev,
+               libqtwebkit-dev,
+               libquazip-dev,
                libquazip-qt5-dev,
                libshp-dev,
                libwlocate-dev,
