@@ -1,2 +1,2 @@
-usr/lib/libmarblewidget-qt5.so.22
 usr/lib/libmarblewidget-qt5.so.*
+usr/lib/libmarblewidget-qt5.so.22
