@@ -17,9 +17,17 @@ endif
 
 override_dh_auto_configure:
 	$(overridden_command) -- -DWITH_DESIGNER_PLUGIN=ON \
-				 -DMARBLE_PLUGIN_PATH=$(marble_plugin_path) \
 				 -DWITH_KF5=TRUE \
 				 $(conf_args)
+	$(overridden_command) -- --builddirectory=obj-marble-qt4 \
+				 -DQT5BUILD=FALSE \
+				 -DWITH_DESIGNER_PLUGIN=ON \
+				 -DMARBLE_PLUGIN_PATH=$(marble_plugin_path) \
+				 $(conf_args)
+
+override_dh_auto_build:
+	$(overridden_command)
+	$(overridden_command) --builddirectory=obj-marble-qt4
 
 override_dh_installdirs:
 	$(overridden_command) -plibmarblewidget$(marble_soversion) $(marble_plugin_path)
@@ -28,6 +36,7 @@ override_dh_installdirs:
 pkgs_with_install_linux = $(patsubst debian/%.install.linux,%,$(wildcard debian/*.install.linux))
 override_dh_install:
 	$(overridden_command) -Xusr/share/kde4/apps/marble/data/LICENSE.txt
+	$(overridden_command) --sourcedir=obj-marble-qt4
 ifeq ($(DEB_HOST_ARCH_OS),linux)
 	# Also install common files in place of debian/*.install.linux variants
 	dh_install $(foreach p,$(pkgs_with_install_linux),-p$p --ignore=debian/$p.install.linux)
@@ -48,3 +57,4 @@ override_dh_auto_test:
 
 override_dh_clean:
 	$(overridden_command) -Xdata/mwdbii/PISLAND.PNT.orig -Xdata/mwdbii/PLAKE.PNT.orig
+	rm -rf obj-marble-qt4
